Se agrego la estructura html semantica para empezar a agregar los estilos

--- a/index.html
+++ b/index.html
@@ -24,6 +24,69 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
+    <div class="content-layout">
+      <header class="header">
+        <div>
+          <h1>Codding <span>Addict</span></h1>
+          <button>
+            <i class="bx bx-menu"></i>
+          </button>
+        </div>
+        <nav class="header__nav-routes">
+          <ul class="nav-routes__list">
+            <li class="nav-routes__item">
+              <a class="nav-routes__link" href="/">Home</a>
+            </li>
+            <li class="nav-routes__item">
+              <a class="nav-routes__link" href="/">About</a>
+            </li>
+            <li class="nav-routes__item">
+              <a class="nav-routes__link" href="/">Projects</a>
+            </li>
+            <li class="nav-routes__item">
+              <a class="nav-routes__link" href="/">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="header__nav-socials">
+          <ul class="nav-socials__list">
+            <li class="nav-socials__item">
+              <a
+                class="nav-socials__link"
+                href="https://github.com/BranLeeDev"
+                target="_blank"
+              >
+                <i class="bx bxl-github nav-socials__icon"></i>
+              </a>
+            </li>
+            <li class="nav-socials__item">
+              <a
+                class="nav-socials__link"
+                href="https://www.linkedin.com/in/brandonaguero/"
+                target="_blank"
+              >
+                <i class="bx bxl-linkedin-square nav-socials__icon"></i>
+              </a>
+            </li>
+            <li class="nav-socials__item">
+              <a class="nav-socials__link" href="/">
+                <i class="bx bxl-facebook-square nav-socials__icon"></i>
+              </a>
+            </li>
+            <li class="nav-socials__item">
+              <a class="nav-socials__link" href="/">
+                <i class="bx bxl-twitter nav-socials__icon"></i>
+              </a>
+            </li>
+            <li class="nav-socials__item">
+              <a class="nav-socials__link" href="/">
+                <i class="bx bxl-instagram nav-socials__icon"></i>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
     <script src="/js/scripts.js" defer></script>
   </body>
 </html>
