--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
   <body>
     <div class="content-layout">
       <header class="header">
-        <div>
-          <h1>Codding <span>Addict</span></h1>
-          <button>
-            <i class="bx bx-menu"></i>
+        <div class="header__title-button">
+          <h1 class="title-button__title">
+            Codding <span class="title-button__color">Addict</span>
+          </h1>
+          <button class="title-button__button">
+            <i class="bx bx-menu title-button__icon"></i>
           </button>
         </div>
         <nav class="header__nav-routes">
